- mini cart jump bug fixed

--- a/app/src/styles/woocommerce/mini-cart.pcss
+++ b/app/src/styles/woocommerce/mini-cart.pcss
@@ -1,6 +1,6 @@
 @import "../variables-and-mixins.pcss";
 
-dialog#mini-cart {
+dialog#popup-mini-cart {
 	.popup {
 		top: 0;
 		right: 0;
